--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
 	padding: 0.5rem 0;
 }
 
+.arena-container{
+    background-image: url("./IMG/battle_forest.jpg");
+    height: 100%;
+    width: auto;
+}
+
 .pkmn__container {
 	width: 21rem;
 	height: 39rem;
